test/runnable/nested.nt
module nested;

macro import std.macro.assert;

void main() {
    {
        int i;
    }
    mut int i;
    void foo() { i = 2; }
    void bar() { foo(); }
    bar();
    assert(i == 2);
}
