test/fail_compilation/missing_symbol_import.nt
module missing_symbol_import;

import std.stdio : does_not_exist;

void main() { }
